added link to investor page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <li><a href="#how-it-works" class="nav-link">HOW IT WORKS</a></li>
                     <li><a href="#testimonials" class="nav-link">TESTIMONIALS</a></li>
                     <li><a href="#results" class="nav-link">RESULTS</a></li>
+                    <li><a href="investors.html" class="nav-link">INVESTORS</a></li>
                 </ul>
             </nav>
 
