--- a/investors.html
+++ b/investors.html
@@ -428,6 +428,9 @@
 
     <!-- ISA Partnership Opportunity -->
     <section id="isa-partnership" class="section">
+        <div class="highlight-badge">
+            <span>Perfect for ISA Providers</span>
+        </div>
         <div class="container">
             <div class="section-header">
                 <span class="section-badge">For ISA Partners</span>
