--- a/investors.html
+++ b/investors.html
@@ -62,42 +62,20 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <div class="hero-badge">From 0 to the biggest Membership community in the world</div>
+                    <div class="hero-badge">Investor Relations</div>
                     <h1 class="hero-title">
-                        Innovative Learning<br>
-                        <span class="gradient-text">For The Future</span>
+                        Building The Future of<br>
+                        <span class="gradient-text">Cloud Engineering Education</span>
                     </h1>
                     <p class="hero-subtitle">
-                        We're revolutionizing tech education with our innovative approach to learning. Our platform combines cutting-edge curriculum with hands-on experience, making high-paying tech careers accessible to everyone.
+                        400+ students trained • 78% placement rate • $130K+ avg. salary • 94% retention
                     </p>
-                    <div class="stats-grid">
-                        <div class="stat">
-                            <div class="stat-value">400+</div>
-                            <div class="stat-label">Students Trained</div>
-                        </div>
-                        <div class="stat">
-                            <div class="stat-value">78%</div>
-                            <div class="stat-label">Placement Rate</div>
-                        </div>
-                        <div class="stat">
-                            <div class="stat-value">$130K+</div>
-                            <div class="stat-label">Avg. Salary</div>
-                        </div>
-                        <div class="stat">
-                            <div class="stat-value">94%</div>
-                            <div class="stat-label">Retention Rate</div>
-                        </div>
+                    <div class="partner-badge">
+                        <i class="fas fa-star"></i> Perfect ISA Partner for Income-Based Financing
                     </div>
-                    <div class="hero-action">
-                        <a href="#contact" class="btn btn-primary btn-large">Partner With Us</a>
-                    </div>
-                    <div class="featured-in">
-                        <p>FEATURED IN</p>
-                        <div class="featured-logos">
-                            <span class="featured-logo">TechCrunch</span>
-                            <span class="featured-logo">Forbes</span>
-                            <span class="featured-logo">Bloomberg</span>
-                        </div>
+                    <div class="hero-cta">
+                        <a href="#isa-partnership" class="btn btn-primary btn-large">ISA Partnership</a>
+                        <a href="#overview" class="btn btn-secondary btn-large">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -108,13 +86,14 @@
     <section id="overview" class="section">
         <div class="container">
             <div class="section-header">
-                <span class="section-badge">Our Story</span>
+                <span class="section-badge">About Us</span>
                 <h2 class="section-title">
-                    Building The Next Generation<br>
-                    <span class="gradient-text">Of Tech Talent</span>
+                    Democratizing access to<br>
+                    <span class="gradient-text">high-paying tech careers</span><br>
+                    through practical education
                 </h2>
                 <p class="section-subtitle">
-                    We're bridging the gap between traditional education and industry demands, creating a new standard for tech education that delivers real results.
+                    We're on a mission to transform lives by providing accessible, high-quality cloud engineering education
                 </p>
             </div>
 
@@ -122,65 +101,83 @@
                 <div class="overview-card">
                     <div class="card-header">
                         <div class="card-icon">
-                            <i class="fas fa-chart-line"></i>
-                        </div>
-                        <h3>Growth Trajectory</h3>
-                    </div>
-                    <div class="card-content">
-                        <p>Experiencing exponential growth with a 300% increase in student enrollment year over year.</p>
-                        <div class="card-metrics">
-                            <li>
-                                <div class="metric">300%</div>
-                                <div class="label">YoY Growth</div>
-                            </li>
-                            <li>
-                                <div class="metric">85%</div>
-                                <div class="label">Course Completion</div>
-                            </li>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="overview-card">
-                    <div class="card-header">
-                        <div class="card-icon">
-                            <i class="fas fa-users"></i>
-                        </div>
-                        <h3>Market Impact</h3>
-                    </div>
-                    <div class="card-content">
-                        <p>Creating meaningful impact in the tech industry by placing skilled professionals in high-demand roles.</p>
-                        <div class="card-metrics">
-                            <li>
-                                <div class="metric">50+</div>
-                                <div class="label">Partner Companies</div>
-                            </li>
-                            <li>
-                                <div class="metric">90%</div>
-                                <div class="label">Employer Satisfaction</div>
-                            </li>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="overview-card">
-                    <div class="card-header">
-                        <div class="card-icon">
                             <i class="fas fa-rocket"></i>
                         </div>
-                        <h3>Future Vision</h3>
+                        <h3>Our Mission</h3>
                     </div>
                     <div class="card-content">
-                        <p>Expanding our reach globally and diversifying our course offerings to meet evolving industry needs.</p>
+                        <p>To empower individuals with the skills, knowledge, and support needed to launch successful careers in cloud engineering.</p>
                         <div class="card-metrics">
                             <li>
-                                <div class="metric">5X</div>
-                                <div class="label">Growth Target</div>
+                                <div class="metric">400+</div>
+                                <div class="label">Students Enrolled</div>
                             </li>
                             <li>
-                                <div class="metric">10+</div>
-                                <div class="label">New Programs</div>
+                                <div class="metric">78%</div>
+                                <div class="label">Job Placement</div>
                             </li>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="overview-card">
+                    <div class="card-header">
+                        <div class="card-icon">
+                            <i class="fas fa-lightbulb"></i>
+                        </div>
+                        <h3>Our Vision</h3>
+                    </div>
+                    <div class="card-content">
+                        <p>To become the world's leading platform for cloud engineering education, known for our practical approach and student success.</p>
+                        <div class="card-metrics">
+                            <li>
+                                <div class="metric">90</div>
+                                <div class="label">Days to First Job</div>
+                            </li>
+                            <li>
+                                <div class="metric">$50K+</div>
+                                <div class="label">Avg. Salary Increase</div>
+                            </li>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="overview-card">
+                    <div class="card-header">
+                        <div class="card-icon">
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h3>Why Choose Us</h3>
+                    </div>
+                    <div class="card-content">
+                        <div class="differentiator-list">
+                            <div class="differentiator-item">
+                                <div class="differentiator-icon">
+                                    <i class="fas fa-laptop-code"></i>
+                                </div>
+                                <div class="differentiator-info">
+                                    <h4>Hands-on Learning</h4>
+                                    <p>Real-world projects and practical experience</p>
+                                </div>
+                            </div>
+                            <div class="differentiator-item">
+                                <div class="differentiator-icon">
+                                    <i class="fas fa-users"></i>
+                                </div>
+                                <div class="differentiator-info">
+                                    <h4>1:1 Mentorship</h4>
+                                    <p>Personalized guidance from industry experts</p>
+                                </div>
+                            </div>
+                            <div class="differentiator-item">
+                                <div class="differentiator-icon">
+                                    <i class="fas fa-certificate"></i>
+                                </div>
+                                <div class="differentiator-info">
+                                    <h4>Job Guarantee</h4>
+                                    <p>Money-back guarantee if no job within 6 months</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
