--- a/investors.html
+++ b/investors.html
@@ -97,88 +97,67 @@
                 </p>
             </div>
 
-            <div class="overview-grid">
-                <div class="overview-card">
-                    <div class="card-header">
-                        <div class="card-icon">
-                            <i class="fas fa-rocket"></i>
-                        </div>
-                        <h3>Our Mission</h3>
-                    </div>
-                    <div class="card-content">
-                        <p>To empower individuals with the skills, knowledge, and support needed to launch successful careers in cloud engineering.</p>
-                        <div class="card-metrics">
-                            <li>
-                                <div class="metric">400+</div>
-                                <div class="label">Students Enrolled</div>
-                            </li>
-                            <li>
-                                <div class="metric">78%</div>
-                                <div class="label">Job Placement</div>
-                            </li>
-                        </div>
+            <div class="steps-container">
+                <div class="step">
+                    <div class="step-number">01</div>
+                    <div class="step-content">
+                        <h3>No Certs or Degrees Needed</h3>
+                        <p>Learn only what companies actually use, focusing on practical skills that get you hired, not theoretical knowledge.</p>
                     </div>
                 </div>
 
-                <div class="overview-card">
-                    <div class="card-header">
-                        <div class="card-icon">
-                            <i class="fas fa-lightbulb"></i>
-                        </div>
-                        <h3>Our Vision</h3>
-                    </div>
-                    <div class="card-content">
-                        <p>To become the world's leading platform for cloud engineering education, known for our practical approach and student success.</p>
-                        <div class="card-metrics">
-                            <li>
-                                <div class="metric">90</div>
-                                <div class="label">Days to First Job</div>
-                            </li>
-                            <li>
-                                <div class="metric">$50K+</div>
-                                <div class="label">Avg. Salary Increase</div>
-                            </li>
-                        </div>
+                <div class="step">
+                    <div class="step-number">02</div>
+                    <div class="step-content">
+                        <h3>Hands-On AWS Projects</h3>
+                        <p>Build real-world systems for your resume that demonstrate your skills and give you confidence in technical interviews.</p>
                     </div>
                 </div>
 
-                <div class="overview-card">
-                    <div class="card-header">
-                        <div class="card-icon">
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <h3>Why Choose Us</h3>
+                <div class="step">
+                    <div class="step-number">03</div>
+                    <div class="step-content">
+                        <h3>Mentorship + Accountability</h3>
+                        <p>Never feel stuck or lost again with our proven system that includes 1-on-1 guidance and community support.</p>
                     </div>
-                    <div class="card-content">
-                        <div class="differentiator-list">
-                            <div class="differentiator-item">
-                                <div class="differentiator-icon">
-                                    <i class="fas fa-laptop-code"></i>
-                                </div>
-                                <div class="differentiator-info">
-                                    <h4>Hands-on Learning</h4>
-                                    <p>Real-world projects and practical experience</p>
-                                </div>
-                            </div>
-                            <div class="differentiator-item">
-                                <div class="differentiator-icon">
-                                    <i class="fas fa-users"></i>
-                                </div>
-                                <div class="differentiator-info">
-                                    <h4>1:1 Mentorship</h4>
-                                    <p>Personalized guidance from industry experts</p>
-                                </div>
-                            </div>
-                            <div class="differentiator-item">
-                                <div class="differentiator-icon">
-                                    <i class="fas fa-certificate"></i>
-                                </div>
-                                <div class="differentiator-info">
-                                    <h4>Job Guarantee</h4>
-                                    <p>Money-back guarantee if no job within 6 months</p>
-                                </div>
-                            </div>
+                </div>
+            </div>
+
+            <div class="results-grid">
+                <div class="result-item">
+                    <div class="result-content">
+                        <h3>400+ Students Enrolled</h3>
+                        <p>Land $130K+ Roles</p>
+                        <div class="result-info">
+                            <p>Get recruiters reaching out to you</p>
                         </div>
+                        <img src="cloud-engineers.jpg" alt="Cloud Engineers" />
+                    </div>
+                </div>
+
+                <div class="result-item">
+                    <div class="result-content">
+                        <div class="result-earnings">
+                            <span class="before">$90K</span>
+                            <span class="arrow">→</span>
+                            <span class="after">$140K</span>
+                        </div>
+                        <div class="result-info">
+                            <h3>Salary Boost</h3>
+                            <p>Significant income increase</p>
+                        </div>
+                        <img src="salary-growth.jpg" alt="Salary Growth" />
+                    </div>
+                </div>
+
+                <div class="result-item">
+                    <div class="result-content">
+                        <h3>100s of Job Offers Secured</h3>
+                        <div class="result-info">
+                            <h3>Career Acceleration</h3>
+                            <p>Fast-track your success</p>
+                        </div>
+                        <img src="job-offers.jpg" alt="Job Offers" />
                     </div>
                 </div>
             </div>
